--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
@@ -155,31 +155,49 @@ mixin sMainInfo4(data)
 						+toggleBtn('pen', `Заметки`)
 			.panel-body
 				.row.row--xxl(style='--bs-gutter-y: 18px')
-					.col-md
-						h4 Инфо
-						table.table
-							tr 
-								td Дата создания
-								td.text-end 23 дек 23, 18:59
-							tr 
-								td Дата создания
-								td.text-end 23 дек 23, 18:59
-							tr 
-								td Дата создания
-								td.text-end 
-									.row.g-2.align-items-center.justify-content-end
-										.col-auto
-											.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") МИ
-										.col-auto Михаил Иванов
+					.col
+						.row.row--xxl(style='--bs-gutter-y: 18px')
+							.col-md
+								h4 Инфо
+								table.table
+									tr 
+										td Дата создания
+										td.text-end 23 дек 23, 18:59
+									tr 
+										td Дата создания
+										td.text-end 23 дек 23, 18:59
+									tr 
+										td Дата создания
+										td.text-end 
+											.row.g-2.align-items-center.justify-content-end
+												.col-auto
+													.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") МИ
+												.col-auto Михаил Иванов
 
-					.col-md
-						h4 Описание
-						p Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона.
-					.col-xl-4
-						h4 Файлы
-						+file-item('Сметная документация.xlsx') 
-						+file-item('Генплан.pdf') 
-						+file-item('Генплан2.pdf') 
-						+add-file()
+							.col-md
+								h4 Описание
+								p Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона.
+							.col-12
+								h4 Файлы
+								+file-item('Сметная документация.xlsx') 
+								+file-item('Генплан.pdf') 
+								+file-item('Генплан2.pdf') 
+								+add-file()
+					.col-lg-4
+						+b.plan-block--mw
+							h4 Чертеж
+							img.res-i(src="img/plan-d.png", alt="")
+							p.row
+								span.col Площадь
+								span.col-auto 32
+							p.row
+								span.col Площадь стен
+								span.col-auto 324
+							p.row
+								span.col Площадь потолка
+								span.col-auto 322
+							p.row
+								span.col Площадь пола
+								span.col-auto 322
 	// end sMainInfo
 
