--- a/sourse/pug/pages/01-info-object-d.pug
+++ b/sourse/pug/pages/01-info-object-d.pug
@@ -14,7 +14,7 @@ block variables
 	- let  bg= '01-2-object.jpg'
 
 block title
-	- let  title= '01-info-object-d2'
+	- let  title= '01-info-object-d'
 	title= title
 block pagecontent
 	//- +mob-mnu()
