--- a/sourse/pug/pages/01-notes-d.pug
+++ b/sourse/pug/pages/01-notes-d.pug
@@ -14,7 +14,7 @@ block variables
 	- let  bg= '01-2-object.jpg'
 
 block title
-	- let  title= '01-info-object-d2'
+	- let  title= '01-notes-d'
 	title= title
 block pagecontent
 	//- +mob-mnu()
@@ -27,5 +27,5 @@ block pagecontent
 			items: ['Объекты', 'ЖК видный']
 		}).mb-0
 		+sPageInfo
-		+sMainInfo3
+		+sMainInfo5
 	+bottomControlBar()
