--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
@@ -201,3 +201,47 @@ mixin sMainInfo4(data)
 								span.col-auto 322
 	// end sMainInfo
 
+	
+mixin sMainInfo5(data)
+	// start sMainInfo
+	+b.sMainInfo.section#sMainInfo&attributes(attributes)
+		.container-fluid
+			+e.wrap
+				+toggleBlock()
+					.swiper-slide
+						+toggleBtn('list', `Список`)
+					.swiper-slide
+						+toggleBtn('tasks', `Задачи`)
+					.swiper-slide
+						+toggleBtn('gantt', `График работ`)
+					.swiper-slide
+						+toggleBtn('info', `Информация`)
+					.swiper-slide
+						+toggleBtn('pen', `Заметки`).active
+			.panel-body
+				h4.mb-4 Заметки
+				+b.note-block
+					+e.head
+						.row(style="--bs-gutter-x:12px")
+							.col-auto
+								.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") МИ
+							.col
+								+e.input-wrap
+									textarea.form-control(placeholder="Написать заметку")
+									button
+										+icon("submit")
+								+add-file()
+					+e.body
+						- for (var x = 0; x < 3; x++)
+							+e.item
+								.row.align-items-center(style="--bs-gutter-x:12px").mb-3
+									.col-auto
+										.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") АИ
+									.col
+										strong.me-2 Антон Иванов
+										span.text-secondary 23 дек 23, 18:59
+								+e.content
+									p Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона.
+									+file-item('Сметная документация.xlsx','14 мб','false', 'f')
+	// end sMainInfo
+
