--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -925,6 +925,9 @@ td:not(:first-child) .sMainInfo__line{
 			font-size: rem(20);
 		}
 	}
+	.icon-file-list{
+			font-size: rem(24);
+	}
 }
 
 .upload-field{
@@ -932,6 +935,7 @@ td:not(:first-child) .sMainInfo__line{
 		display: flex;
 		align-items: center;
 		width: 100%;
+		cursor: pointer;
 		
 	}
 	.icon{
@@ -953,5 +957,43 @@ td:not(:first-child) .sMainInfo__line{
 	}
 	p.row{
 		font-style: italic;
+	}
+}
+
+.note-block{
+	max-width: rem(648);
+	margin-bottom: rem(26);
+	&__input-wrap{
+		position: relative;
+		margin-bottom: rem(14);
+		button{
+			background: none !important;
+			border: none !important;
+			padding: 0;
+			position: absolute;
+			top: rem(16);
+			right: rem(18);
+			color: $secondary;
+			.icon{
+				font-size: rem(24);
+			}
+		}
+	}
+	&__head{
+		margin-bottom: rem(24);
+	}
+	&__content{
+		padding-left: calc(10px + #{rem(36)});
+	}
+	&__item{
+		padding-bottom: rem(16);
+		&:not(:last-child){
+			border-bottom: 1px solid #E2E2E2;
+
+			margin-bottom: rem(24);
+		}
+		strong{
+			font-weight: 500;
+		}
 	}
 }
