--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -63,6 +63,10 @@
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
+.icon-file-list {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-fist {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
@@ -96,6 +100,10 @@
 	width: math.div(20,20)*1em;
 }
 .icon-settings {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-submit {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
 }
