add pages 'work with object'

--- a/sourse/pug/blocks/form-wrap/form-wrap.pug
+++ b/sourse/pug/blocks/form-wrap/form-wrap.pug
@@ -78,3 +78,8 @@ mixin policy()
 	+e.policy
 		+in-c()(checked)
 			+e.SMALL.text.text-secondary Согласен на обработку и хранение моих персональных данных в соответствии с условиями
+
+mixin customInput(placeholder,  t='text', label, name= t)
+	+b.custom-input-wrap.form-group&attributes(attributes)
+		+e.INPUT.input.form-control(name=name type=t placeholder=placeholder)
+		+e.line
