--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -213,40 +213,6 @@
 			}
 		}
 	}
-	&__avatar {
-		position: relative;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		flex: 0 0 auto;
-		width: rem(32);
-		height: rem(32);
-		border-radius: 50%;
-		overflow: hidden;
-		background-color: $blue;
-		@include media-breakpoint-up(md) {
-			width: rem(48);
-			height: rem(48);
-			margin: rem(12) auto;
-		}
-		@include media-breakpoint-down(md) {
-			order: 3;
-		}
-		span {
-			@include text-14;
-			@include a-cent1;
-			color: #fff;
-			z-index: 1;
-			line-height: 1;
-		}
-		img {
-			position: relative;
-			object-fit: cover;
-			width: 100%;
-			height: 100%;
-			z-index: 2;
-		}
-	}
 	&__settings {
 		color: $gray-600;
 		@include media-breakpoint-up(md) {
@@ -270,6 +236,52 @@
 		.icon {
 			font-size: rem(24);
 			flex: 0 0 auto;
+		}
+	}
+}
+
+.avatar-wrap {
+	display: flex;
+	align-items: center;
+	@include media-breakpoint-down(md) {
+		order: 3;
+	}
+	.avatar {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex: 0 0 auto;
+		width: rem(32);
+		height: rem(32);
+		border-radius: 50%;
+		overflow: hidden;
+		background-color: $blue;
+		@include media-breakpoint-up(md) {
+			width: rem(48);
+			height: rem(48);
+			margin: rem(12) auto;
+		}
+		span {
+			@include text-14;
+			@include a-cent1;
+			color: #fff;
+			z-index: 1;
+			line-height: 1;
+		}
+		img {
+			position: relative;
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+			z-index: 2;
+		}
+	}
+	span {
+		font-size: rem(14);
+		line-height: 1.25;
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
 		}
 	}
 }
@@ -920,9 +932,10 @@
 
 .details-with-toggle {
 	position: relative;
-	// @include media-breakpoint-down(md) {
-	// 	margin-bottom: rem(42);
-	// }
+	@include media-breakpoint-down(md) {
+		// margin-bottom: rem(42);
+		padding-top: rem(24);
+	}
 	&__wrap {
 		display: none;
 		flex-direction: column;
@@ -1377,5 +1390,40 @@
 			flex: 0 0 auto;
 			margin-right: rem(6);
 		}
+	}
+}
+
+.close-btn {
+	@include mt;
+	position: absolute;
+	top: rem(12);
+	right: rem(12);
+	cursor: pointer;
+	color: $gray-600;
+	&:hover {
+		color: $accent;
+	}
+	@include media-breakpoint-up(md) {
+		top: rem(24);
+		right: rem(24);
+	}
+	.icon {
+		font-size: rem(20);
+		@include media-breakpoint-up(md) {
+			font-size: rem(24);
+		}
+	}
+}
+
+.btn {
+	&-accent {
+    --bs-btn-bg: #f4b13e;
+    --bs-btn-border-color: #f4b13e;
+    --bs-btn-hover-bg: #FFC053;
+    --bs-btn-hover-border-color: #FFC053;
+    --bs-btn-active-bg: #FFC053;
+    --bs-btn-active-border-color: #FFC053;
+    --bs-btn-disabled-bg: #f4b13e;
+    --bs-btn-disabled-border-color: #f4b13e;
 	}
 }
