--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -17,7 +17,6 @@
  	}
 }
 
-
 .parsley-error{
 	border-image: none;
 	border: 2px solid  red !important;
@@ -42,6 +41,46 @@
 		}
 	}
 }
+
+.custom-input-wrap {
+	overflow: hidden;
+	position: relative;
+	&__input {
+		font-family: 'AkzidenzGroteskProExtended';
+		font-size: rem(18);
+		padding: 0 0 rem(12) 0;
+		border: none;
+		border-bottom: 2px solid $gray-200;
+		font-weight: 500;
+		line-height: 1.25;
+		color: #000;
+		border-radius: 0;
+		&::placeholder {
+			color: $gray-600;
+		}
+		&:focus {
+			border-color: $gray-200;
+			& ~ .custom-input-wrap__line {
+				transform: translateX(0);
+			}
+		}
+		@include media-breakpoint-up(md) {
+			font-size: rem(24);
+		}
+	}
+	&__line {
+		@include mt;
+		position: absolute;
+		display: block;
+		width: 100%;
+		height: 2px;
+		background-color: $accent;
+		left: 0;
+		bottom: 0;
+		transform: translateX(-100%);
+	}
+}
+
 @include media-breakpoint-up(xl) {}
 
 @include media-breakpoint-up(lg) {}
@@ -234,6 +273,32 @@ input::-webkit-inner-spin-button {
 // }
 // }
 // }
+
+textarea.form-control {
+	resize: none;
+	min-height: rem(96);
+	padding: rem(14) rem(18);
+	font-size: rem(16);
+	line-height: 1.25;
+	color: #000;
+	background-color: $gray-100;
+	border: 2px solid $gray-100;
+	&::placeholder {
+		color: $gray-600;
+	}
+	&:focus {
+		border-color: $accent;
+		background-color: #fff;
+	}
+	&:disabled, &.disabled {
+		pointer-events: none;
+		background-color: $gray-400;
+		border-color: $gray-400;
+		&::placeholder {
+			color: #0000007A;
+		}
+	}
+}
 
 
 .select2-container--default .select2-selection--single {
