--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -899,7 +899,7 @@ td:not(:first-child) .sMainInfo__line{
 .row--xxl{
 	@include media-breakpoint-up(xxl) {
 
-		--bs-gutter-x: #{rem(48)}
+		--bs-gutter-x: #{rem(48)};
 	}
 }
 
@@ -941,5 +941,20 @@ td:not(:first-child) .sMainInfo__line{
 	&__file-name{
 		@include ellips;
 		max-width: calc(100% - #{rem(30)});
+	}
+}
+
+.createObject-page {
+	main {
+		overflow-y: auto;
+		overflow-x: hidden;
+		justify-content: center;
+		align-items: center;
+		padding-top: 0;
+		padding-bottom: 0;
+		@include media-breakpoint-up(md) {
+			padding-top: rem(24);
+			padding-bottom: rem(24);
+		}
 	}
 }
