--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -39,6 +39,10 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
 }
+.icon-close {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-copy {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
