--- a/sourse/pug/pages/02-create-task-d.pug
+++ b/sourse/pug/pages/02-create-task-d.pug
@@ -26,10 +26,11 @@ block pagecontent
 			author: true,
 		})
 			h2 1. Натяжка потолка
-			+customInput('Введите название', 'text')
-			//- .d-md-none
-			//- 	+selectStatus()
-			+input('Введите описание объекта', 'textarea')
+			+e.main-row.row
+				.col-12
+					+customInput('Введите название', 'text')
+				.col-12
+					+input('Введите описание объекта', 'textarea')
 		.close-btn: +icon('close')
       
 
