--- a/sourse/pug/pages/02-edit-room.pug
+++ b/sourse/pug/pages/02-edit-room.pug
@@ -32,6 +32,25 @@ block pagecontent
 					+customInput('Введите название', 'text')
 				.col-12
 					+input('Введите описание объекта', 'textarea')
+				.col-12
+					+b.plan-block
+						img.res-i(src="img/plan-d.png", alt="")
+						+e.info
+							p.row
+								span.col Площадь
+								span.col-auto 32
+							p.row
+								span.col Площадь стен
+								span.col-auto 324
+							p.row
+								span.col Площадь потолка
+								span.col-auto 322
+							p.row
+								span.col Площадь пола
+								span.col-auto 322
+							+e.edit(href='#')
+								| Редактировать
+								+icon('edit')
 		.close-btn: +icon('close')
       
 
