--- a/sourse/pug/blocks/sCreateObject/_sCreateObject.scss
+++ b/sourse/pug/blocks/sCreateObject/_sCreateObject.scss
@@ -8,7 +8,7 @@
 	min-height: rem(732);
 	max-width: rem(1080);
 	background-color: #fff;
-	box-shadow: 0 -5px 5px 0 rgba(0, 0, 0, 0.05);
+	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.05);
 	@include media-breakpoint-up(md) {
 		max-width: rem(1080);
 		width: calc(100% - var(--gutterX));
@@ -222,13 +222,16 @@
 		justify-content: center;
 		flex-direction: column;
 		padding: rem(18);
-		aspect-ratio: 624/300;
+		aspect-ratio: 336/192;
 		border: 1px dashed $gray-200;
 		color: #000;
 		font-weight: 500;
 		line-height: 1.25;
 		font-size: rem(16);
 		cursor: pointer;
+		@include media-breakpoint-up(sm) {
+			aspect-ratio: 624/300;
+		}
 		&:hover {
 			background-color: $accent;
 			border-color: $accent;
@@ -251,6 +254,71 @@
 		.icon {
 			flex: 0 0 auto;
 			font-size: rem(20);
+		}
+	}
+	.select2-dropdown--below {
+		@include media-breakpoint-down(md) {
+			left: -62px !important;
+		}
+	}
+	.plan-block {
+		@include roww('24px', '12px');
+		display: flex;
+		// flex-direction: column;
+		flex-direction: row;
+		flex-wrap: wrap;
+		width: calc(100% + var(--bs-gutter-x));
+		// @include media-breakpoint-up(sm) {
+		// 	flex-direction: row;
+		// }
+		img {
+			width: 100%;
+			max-width: rem(350);
+			margin-bottom: 0;
+			@include media-breakpoint-up(sm) {
+				max-width: rem(300);
+			}
+		}
+		&__info {
+			display: flex;
+			flex-direction: column;
+			flex-grow: 1;
+			min-width: 230px;
+			margin-left: auto;
+			@include media-breakpoint-up(sm) {
+				max-width: 350px;
+			}
+			@include media-breakpoint-up(md) {
+				max-width: none;
+			}
+		}
+		p {
+			margin-bottom: rem(12);
+		}
+		&__edit {
+			display: inline-flex;
+			flex-direction: row-reverse;
+			align-items: center;
+			line-height: 1.25;
+			font-style: italic;
+			color: $gray-600;
+			margin-left: auto;
+			margin-top: rem(12);
+			@include media-breakpoint-up(md) {
+				flex-direction: row;
+			}
+			&:hover {
+				color: $primary;
+			}
+			.icon {
+				font-size: rem(24);
+				flex: 0 0 auto;
+				margin-right: rem(12);
+				@include media-breakpoint-up(md) {
+					margin-right: 0;
+					margin-left: rem(12);
+				}
+			}
 		}
 	}
 	@include media-breakpoint-up(xl) {}
