--- a/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
+++ b/sourse/pug/blocks/sPageInfo/_sPageInfo.scss
@@ -2,6 +2,7 @@
 .sPageInfo {
 	// --sPT: #{rem()};
 	// --sPB: #{rem()};
+	
 	--sTPB: #{rem(0)};
 	&__continer {
 		@include media-breakpoint-down(md) {
@@ -39,6 +40,11 @@
 		@include media-breakpoint-up(md) {
 			flex-direction: row;
 		}
+	}
+	.tabs__wrap{
+		position: absolute;
+		@include a-cent;
+		z-index: -1;
 	}
 	&__wrap {
 		padding: rem(24) rem(12) rem(48) rem(12);
@@ -104,6 +110,14 @@
 			@include media-breakpoint-up(md) {
 				color: #fff;
 			}
+		}
+	}
+	.tabs__btn{
+		@include mt;
+		opacity: 0.47999998927116394;
+		&:hover,
+		&.active{
+			opacity: 1;
 		}
 	}
 	@include media-breakpoint-up(xl) {}
