--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -31,6 +31,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-check2 {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
+}
 .icon-chevron-down {
 	font-size:math.div(20,10)*1rem;
 	width: math.div(20,20)*1em;
@@ -146,4 +150,8 @@
 .icon-workers {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
+}
+.icon-write {
+	font-size:math.div(20,10)*1rem;
+	width: math.div(20,20)*1em;
 }
