--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -297,14 +297,23 @@
 		--bs-gutter-y: #{rem(12)};
 	}
 	&__col {
+		display: flex;
 		@include media-breakpoint-down(md) {
-			display: flex;
 			justify-content: center;
 		}
+		@include media-breakpoint-up(md) {
+			align-items: center;
+		}
 	}
-
+	.freeMode-slider--js {
+		@include media-breakpoint-up(md) {
+			overflow: hidden;
+		}
+	}
 	h1 {
 		margin-bottom: 0;
+		display: flex;
+		align-items: center;
 		line-height: 1.2;
 		text-transform: uppercase;
 		font-family: "AkzidenzGroteskProExtended";
@@ -317,6 +326,7 @@
 			font-weight: 500;
 			line-height: 130%;
 			vertical-align: middle;
+			margin-left: rem(18);
 			@include media-breakpoint-up(md) {
 				// margin-left: rem(18);
 				line-height: 140%;
@@ -361,6 +371,28 @@
 		// @include media-breakpoint-down(md) {
 		// 	display: inline-flex;
 		// }
+	}
+	&__sample {
+		display: none;
+		align-items: center;
+		font-size: rem(16);
+		line-height: 1.25;
+		font-weight: 400;
+		margin-left: rem(18);
+		@include media-breakpoint-up(md) {
+			display: flex;
+		}
+		.icon {
+			font-size: rem(20);
+			flex: 0 0 auto;
+			margin-right: rem(6);
+			&-check2 {
+				color: $success;
+			}
+			&-write {
+				color: $danger;
+			}
+		}
 	}
 }
 
@@ -967,10 +999,14 @@
 }
 
 .details-with-toggle {
+	@include mt;
 	position: relative;
 	@include media-breakpoint-down(md) {
 		// margin-bottom: rem(42);
 		padding-top: rem(42);
+		&.active {
+			padding-top: 0;
+		}
 	}
 	&__wrap {
 		display: none;
@@ -1379,7 +1415,8 @@
 				}
 			}
 		}
-		h3 {
+		h3, .h3 {
+			font-family: 'AkzidenzGroteskProExtended';
 			margin-bottom: 0;
 			font-size: rem(18);
 			@include media-breakpoint-up(md) {
@@ -1387,6 +1424,22 @@
 			}
 			@include media-breakpoint-up(xxl) {
 				font-size: rem(24);
+			}
+		}
+		.badge {
+			--bs-badge-padding-y: #{rem(6.25)};
+			--bs-badge-font-size: #{rem(14)};
+
+			margin-right: rem(12);
+		}
+		a {
+			color: #000;
+			font-size: rem(16);
+			@include media-breakpoint-up(md) {
+				font-size: rem(20);
+			}
+			&:hover {
+				color: $primary;
 			}
 		}
 	}
@@ -1425,6 +1478,61 @@
 			max-width: rem(20);
 			flex: 0 0 auto;
 			margin-right: rem(6);
+		}
+	}
+	&--2 {
+		table {
+			min-width: rem(900);
+			@include media-breakpoint-up(md) {
+				min-width: rem(1000);
+			}
+			th {
+				@include media-breakpoint-up(md) {
+					padding: rem(20) rem(12);
+				}
+				&:first-child {
+					min-width: rem(300);
+				}
+				&:last-child {
+					@include media-breakpoint-up(md) {
+						padding-right: rem(12);
+					}
+				}
+				&:nth-child(2) {
+					width: calc(rem(120) + rem(24));
+				}
+				&:nth-child(3) {
+					width: calc(rem(120) + rem(24));
+				}
+				&:nth-child(4) {
+					width: calc(rem(120) + rem(24));
+				}
+				&:nth-child(5) {
+					width: calc(rem(216) + rem(24));
+				}
+			}
+			tbody {
+				tr {
+					&:hover {
+						td {
+							background-color: $gray-100;
+						}
+					}
+				}
+			}
+			td {
+				@include mt;
+				border-bottom: 1px solid $gray-200;
+				&:last-child {
+					@include media-breakpoint-up(md) {
+						padding-right: rem(12);
+					}
+				}
+				.icon {
+					font-size: rem(20);
+					margin-right: rem(12);
+				}
+			}
 		}
 	}
 }
