--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -581,6 +581,7 @@
 			font-size: rem(14);
 			display: block;
 			background-image: none;
+			background-color: transparent;
 			@include media-breakpoint-up(md) {
 				font-size: rem(16);
 			}
@@ -1221,6 +1222,13 @@
 					}
 				}
 			}
+			&:hover {
+				& > td {
+					&:not([colspan='9']) {
+						background-color: $gray-400;
+					}
+				}
+			}
 		}
 		th {
 			@include text-14;
@@ -1250,19 +1258,19 @@
 				td {
 					&:first-child {
 						@include media-breakpoint-up(md) {
-							padding-left: rem(80);
+							padding-left: rem(112);
 						}
 					}
 					td {
 						&:first-child {
 							@include media-breakpoint-up(md) {
-								padding-left: rem(112);
+								padding-left: rem(144);
 							}
 						}
 						td {
 							&:first-child {
 								@include media-breakpoint-up(md) {
-									padding-left: rem(112);
+									padding-left: rem(176);
 								}
 							}
 						}
@@ -1337,6 +1345,7 @@
 			}
 		}
 		td {
+			@include mt;
 			font-size: rem(14);
 			padding: rem(10) rem(12);
 			line-height: 1.25;
@@ -1368,7 +1377,7 @@
 		&.active {
 			& + .inner-level {
 				& > td[colspan='9'] {
-					border-bottom: 1px solid $gray-200;
+					border-bottom: 1px solid $gray-400;
 				}
 			}
 		}
@@ -1518,6 +1527,11 @@
 							background-color: $gray-100;
 						}
 					}
+					&:last-child {
+						td {
+							border-bottom: none;
+						}
+					}
 				}
 			}
 			td {
@@ -1531,6 +1545,9 @@
 				.icon {
 					font-size: rem(20);
 					margin-right: rem(12);
+				}
+				&[colspan="5"] {
+					border-bottom: none;
 				}
 			}
 		}
