--- a/sourse/pug/pages/02-create-task-d.pug
+++ b/sourse/pug/pages/02-create-task-d.pug
@@ -26,25 +26,26 @@ block pagecontent
 			author: true,
 		})
 			h2 1. Натяжка потолка
-			+e.main-row.row
-				.col-12
-					+b.custom-select-wrap--third-type
-						select(class="basic-select basic-select--js" data-placeholder='Выберите наименование работы')
-							option
-							-for(let i = 1; i <= 10; i++)
-								option!= i
-				.col-12
-					+b.custom-input-label.form-group
-						label
-							+e.INPUT.input.form-control(name='Количество слоев' type='text' placeholder='Количество слоев')
-							+e.SPAN.input-title Количество слоев
-				.col-12
-					+b.custom-input-label.form-group
-						label
-							+e.INPUT.input.form-control(disabled name='Требуемый материал' type='text' placeholder='Требуемый материал')
-							+e.SPAN.input-title Требуемый материал
-				.col-12
-					+input('Введите описание объекта', 'textarea')
+			+b.form-wrap
+				+e.main-row.row
+					.col-12
+						+b.custom-select-wrap--third-type
+							select(class="basic-select basic-select--js" data-placeholder='Выберите наименование работы')
+								option
+								-for(let i = 1; i <= 10; i++)
+									option!= i
+					.col-12
+						+e.input-wrap.form-group
+							label
+								+e.INPUT.input.form-control(name='Количество слоев' type='text' placeholder='Количество слоев')
+								+e.SPAN.input-title Количество слоев
+					.col-12
+						+e.input-wrap.form-group
+							label
+								+e.INPUT.input.form-control(disabled name='Требуемый материал' type='text' placeholder='Требуемый материал')
+								+e.SPAN.input-title Требуемый материал
+					.col-12
+						+input('Введите описание объекта', 'textarea')
 		.close-btn: +icon('close')
       
 
