--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -1157,10 +1157,13 @@
 					.select2-selection__rendered {
 						color: #fff;
 						font-weight: 500;
-						font-size: rem(16);
+						font-size: rem(14);
 						margin-right: rem(6);
 						display: flex;
 						align-items: center;
+						@include media-breakpoint-up(md) {
+							font-size: rem(16);
+						}
 					}
 				}
 				&--in-work {
