--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -820,6 +820,10 @@ h1 {
 	width: 100%;
 	td{
 		height: 52px;
+		font-size: rem(14);
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+		}
 	}
 	tr:not(:last-child) td{
 		border-bottom: 1px solid #E2E2E2;
@@ -879,6 +883,12 @@ td:not(:first-child) .sMainInfo__line{
 	}
 	padding: 18px 12px;
 	background-color: #fff;
+
+	h4 {
+		@include media-breakpoint-down(md) {
+			font-size: rem(18);
+		}
+	}
 }
 .avatar-block{
 	text-transform: uppercase;
@@ -908,6 +918,10 @@ td:not(:first-child) .sMainInfo__line{
 	@include roww(5px);
 	align-items: center;
 	margin-bottom: rem(12);
+	font-size: rem(14);
+	@include media-breakpoint-up(md) {
+		font-size: rem(16);
+	}
 	&__name{
 		color: $body-color;
 		&:hover{
@@ -948,6 +962,10 @@ td:not(:first-child) .sMainInfo__line{
 	&__file-name{
 		@include ellips;
 		max-width: calc(100% - #{rem(30)});
+		font-size: rem(14);
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+		}
 	}
 }
 
@@ -1005,6 +1023,10 @@ td:not(:first-child) .sMainInfo__line{
 	}
 	&__item{
 		padding-bottom: rem(16);
+		font-size: rem(14);
+		@include media-breakpoint-up(md) {
+			font-size: rem(16);
+		}
 		&:not(:last-child){
 			border-bottom: 1px solid #E2E2E2;
 
