--- a/sourse/pug/blocks/sObject/_sObject.scss
+++ b/sourse/pug/blocks/sObject/_sObject.scss
@@ -1,7 +1,7 @@
 // start .sObject
 .sObject {
 	// --sPT: #{rem(0)};
-	// --sPB: #{rem()};
+	// --sPB: #{rem(24)};
 	// --sTPB: #{rem()};
 	&__row{
 		--bs-gutter-x: #{rem(12)};
