--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -212,6 +212,11 @@
 				}
 			}
 		}
+		.tooltip {
+			@include media-breakpoint-down(md) {
+				display: none;
+			}
+		}
 	}
 	&__settings {
 		color: $gray-600;
@@ -275,6 +280,8 @@
 			width: 100%;
 			height: 100%;
 			z-index: 2;
+			border-radius: 50%;
+			overflow: hidden;
 		}
 	}
 	span {
@@ -414,6 +421,10 @@
 	position: relative;
 	height: 100%;
 	width: 100%;
+	@include mt;
+	&:hover {
+		box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.05);
+	}
 	@include media-breakpoint-up(sm) {
 		--ratio: 336/308;
 	}
@@ -430,6 +441,17 @@
 		// @include media-breakpoint-up(xl) {
 		// 	font-size: rem(24);
 		// }
+		&:before {
+			content: '';
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			background-color: transparent;
+			z-index: 2;
+		}
 		&:hover {
 			color: $blue;
 		}
@@ -449,6 +471,8 @@
 		}
 	}
 	&__link {
+		position: relative;
+		z-index: 3;
 		&:not(:hover) {
 			color: $gray-600;
 		}
@@ -542,12 +566,16 @@
 	// max-width: rem(270);
 	display: flex;
 	align-items: center;
-	position: relative;
+	@include media-breakpoint-up(md) {
+		position: relative;
+	}
 	&__label {
 		@include mt;
 		font-size: rem(14);
 		margin-right: rem(6);
 		order: 1;
+		display: flex;
+		align-items: center;
 		@include media-breakpoint-up(md) {
 			font-size: rem(16);
 		}
@@ -555,14 +583,16 @@
 			position: relative;
 			display: inline-block;
 			vertical-align: text-bottom;
-			width: rem(20);
-			height: rem(20);
+			width: 14px;
+			height: 20px;
+			flex: 0 0 auto;
+			margin-left: rem(4);
 			&::before {
 				content: "";
 				position: absolute;
 				display: block;
-				width: rem(4);
-				height: rem(4);
+				width: 4px;
+				height: 4px;
 				border-radius: 50%;
 				background-color: $gray-600;
 				@include a-cent1;
@@ -572,6 +602,8 @@
 	.select2 {
 		flex-grow: 1;
 		order: 2;
+		width: max-content !important;
+    padding-right: rem(26);
 		&-selection {
 			--bs-form-select-bg-img: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15.9647 6.82078C15.9461 6.76927 15.9308 6.7228 15.9306 6.71751C15.9294 6.68417 15.3403 6.11764 15.2681 6.08044C15.0826 5.98473 14.8178 5.98297 14.6313 6.0762C14.5925 6.09563 13.5361 7.1349 12.2838 8.38566L10.007 10.6598L7.71846 8.37438C5.18178 5.84117 5.36048 5.99957 5.04288 6.00301C4.8188 6.00545 4.71705 6.06644 4.39373 6.39205C4.00811 6.78039 3.91783 7.04701 4.07022 7.34755C4.14711 7.49916 9.60044 12.9333 9.73686 12.9942C9.88838 13.0619 10.1388 13.0658 10.2762 13.0026C10.4258 12.9338 15.8704 7.49036 15.9441 7.33584C16.0098 7.19841 16.0188 6.97103 15.9647 6.82078Z' fill='%23F4B13E'/%3E%3C/svg%3E%0A");
 			background-size: 20px;
@@ -600,10 +632,44 @@
 				width: rem(20);
 				height: rem(20);
 			}
+			&::after {
+				content: '';
+				position: absolute;
+				display: block;
+				width: 100%;
+				height: 100%;
+				min-width: rem(120);
+				top: 0;
+				right: 100%;
+				z-index: 10;
+			}
 		}
-		&-container--open {
-			.select2-selection:before {
-				transform: translateY(-50%) rotateX(180deg);
+		&-container {
+			&--open {
+				.select2-container--open .select2-dropdown--below {
+					width: 100%;
+				}
+				.select2-selection:before {
+					transform: translateY(-50%) rotateX(180deg);
+				}
+			}
+		}
+		&-container.select2-container--default.select2-container--open {
+			@include media-breakpoint-down(md) {
+				left: 50% !important;
+				transform: translateX(-50%);
+				width: calc(100% - 1.5rem);
+				z-index: 100;
+				.select2-dropdown {
+					width: 100% !important;
+				}
+			}
+		}
+		&-container.select2-container--default.select2-container--below {
+			@include media-breakpoint-down(md) {
+				left: 0 !important;
+				transform: none;
+				width: auto;
 			}
 		}
 	}
@@ -925,6 +991,17 @@
 	background-color: $gray-700;
 	padding: rem(8) rem(12);
 	z-index: 100;
+	&::after {
+		content: '';
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 50%;
+		left: 0;
+		background-color: $gray-700;
+		z-index: -1;
+	}
 	@include media-breakpoint-up(md) {
 		margin-left: var(--asideW);
 		padding: rem(9) rem(24);
@@ -1194,6 +1271,15 @@
 	overflow-x: auto;
 	overflow-y: hidden;
 	background-color: #fff;
+	& > table {
+		& > tbody {
+			& > tr {
+				& > td { 
+					border-top: 1px solid $gray-200;
+				}
+			}
+		}
+	}
 	table {
 		width: 100%;
 		tr {
@@ -1209,12 +1295,12 @@
 			}
 			&.active {
 				td {
-					background-color: $gray-100;
-					border-top: 1px solid $gray-200;
-					border-bottom: 1px solid $gray-200;
-					.h3, p {
-						color: $primary;
-					}
+					background-color: $gray-400;
+					border-top: 1px solid $gray-400;
+					border-bottom: 1px solid $gray-400;
+					// .h3, p {
+					// 	color: $primary;
+					// }
 					.icon {
 						transform: rotate(90deg);
 					}
@@ -1228,7 +1314,7 @@
 			&:hover {
 				& > td {
 					&:not([colspan='9']) {
-						background-color: $gray-400;
+						background-color: $gray-100;
 					}
 				}
 			}
@@ -1352,6 +1438,7 @@
 			font-size: rem(14);
 			padding: rem(10) rem(12);
 			line-height: 1.25;
+			cursor: pointer;
 			// border-top: 1px solid transparent;
 			// border-bottom: 1px solid transparent;
 			@include media-breakpoint-up(md) {
@@ -1462,9 +1549,9 @@
 			flex: 0 0 auto;
 			margin-right: rem(12);
 			color: $accent;
-			&:hover {
-				transform: rotate(90deg);
-			}
+			// &:hover {
+			// 	transform: rotate(90deg);
+			// }
 		}
 	}
 	&__goals {
