--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -113,7 +113,7 @@ main {
 	padding-bottom: calc(rem(24) + rem(48));
 	padding-top: rem(48);
 	@include media-breakpoint-up(md) {
-		padding-bottom: 0;
+		padding-bottom: rem(24);
 		padding-top: 0;
 	}
 }
@@ -124,7 +124,7 @@ aside {
 		top: 0;
 		left: 0;
 		width: 100%;
-		z-index: 100;
+		z-index: 101;
 	} 
 	@include media-breakpoint-up(md) {
 		height: 100vh;
@@ -133,6 +133,7 @@ aside {
 		top: 0;
 		flex: 0 0 var(--asideW);
 		background-color: $gray-800;
+		z-index: 101;
 	}
 }
 .main-center-wrap {
@@ -560,6 +561,7 @@ p {
 }
 
 .tooltip {
+	transition: opacity .18s ease-in;
 	.tooltip-arrow {
 		display: none;
 	}
